--- a/app.json
+++ b/app.json
@@ -5,11 +5,11 @@
     "iconFile": "res/icon.png",
     "author": {
         "name": "Daniël Brekelmans",
-        "homepage": "https://github.com/dbrekelmans/rocketchat-remindBot",
-        "support": "https://github.com/dbrekelmans/rocketchat-remindBot/issues"
+        "homepage": "https://github.com/dbrekelmans/reminder-rc-app",
+        "support": "https://github.com/dbrekelmans/reminder-rc-app/issues"
     },
-    "name": "remindBot",
-    "nameSlug": "remindbot",
-    "classFile": "src/RemindBot.ts",
+    "name": "reminder",
+    "nameSlug": "reminder",
+    "classFile": "src/Reminder.ts",
     "description": "Set reminders for a user or channel with the /remind command."
 }
